--- a/_posts/2024-01-01-APA001.markdown
+++ b/_posts/2024-01-01-APA001.markdown
@@ -71,8 +71,8 @@ $$Q(t)=(1-t)Q_{0} + tQ_{1}, t\in \mathbf{R}$$.
 两条直线上的点之间的距离的平方为:   
 $$F(s,t)=\|P(s)-Q(t)\|^{2} = as^{2}-2bst+ct^{2}+2ds-et+f$$  
 其中：  
-$$a=\|P_{1}-P{0}\|^{2}, \qquad b=(P_{1}-P_{0})\cdot(Q_{1}-Q_{0}), \quad c=\|Q_{1}-Q_{0}\|^{2}, $$   
-$$\qquad \qquad d=(P_{1}-P_{0})\cdot(P_{0}-Q_{0}), \qquad e=(Q_{1}-Q_{0})\cdot(P_{0}-Q_{0}), \quad f=\|P_{0}-Q_{0}\|^{2}$$  
+$$a=\|P_{1}-P{0}\|^{2}, \quad b=(P_{1}-P_{0})\cdot(Q_{1}-Q_{0}), \quad c=\|Q_{1}-Q_{0}\|^{2}, $$   
+$$d=(P_{1}-P_{0})\cdot(P_{0}-Q_{0}), \quad e=(Q_{1}-Q_{0})\cdot(P_{0}-Q_{0}), \quad f=\|P_{0}-Q_{0}\|^{2}$$  
 如果$\quad ac-b^{2}=\|(P_{1}-P_{0})\times (Q_{1}-Q_{0})\|^{2}=0$ 则两条直线平行。  
 如果$\quad ac-b^{2}>0$，则$F(s,t)$有全局最小值，当$\nabla F(s,t)=(0,0)$. 此时解$(\hat{s}, \hat{t})$分别代表两条直线距离最近是的参数。  
 接下来求解：
