--- a/_posts/2024-01-01-APA001.markdown
+++ b/_posts/2024-01-01-APA001.markdown
@@ -66,11 +66,11 @@ int classifyUsingExact = GetClassification<Rational>(rp, 3, rv);
 计算两条n维直线之间的距离。  
 两个顶点$P_{0}$和$P_{1}$确定一条直线，参数表达为:  
 
-$$P(s)=(1-s)P_{0} + sP_{1}, s\in\mathbf{R}$$.   
+$$P(s)=(1-s)P_{0} + sP_{1},\quad s\in \mathbf{R}$$   
 
 第二条直线由$Q_{0}$和$Q_{1}$确定, 参数表达为:  
 
-$$Q(t)=(1-t)Q_{0} + tQ_{1}, t\in \mathbf{R}$$.  
+$$Q(t)=(1-t)Q_{0} + tQ_{1},\quad t\in \mathbf{R}$$  
 
 两条直线上的点之间的距离的平方为:   
 
