--- a/_posts/2024-01-01-APA001.markdown
+++ b/_posts/2024-01-01-APA001.markdown
@@ -12,6 +12,8 @@ Arbitrary Precision Arthmetic(APA)
 
 在解决几何问题的过程中使用浮点数计算并不总是符合算法预期的，我们所要求的计算精度的鲁棒性当前的浮点数会不满足，如IEEE 754-2008标准定义了32位和64位浮点数，即使已经有24位和53位的计算精度。下面介绍几个样例：
 
+# [样例](#样例)
+
 ## [样例1](#样例1)
 
 计算点$P$是否位于一个2D的凸多边形内，多边形有n个顶点$V_{i}$ 其中 $0\leq i<n$. 顶点为逆时针顺序.  
@@ -96,6 +98,7 @@ $$\left( \begin{array}{c} a & -b \\ -b & c\end{array} \right) \left( \begin{arra
 
 $$\left( \begin{array}{c} \hat{s} \\ \hat{t} \end{array} \right) = \frac{1}{ac-b^{2}} \left( \begin{array}{c} be-cd \\ ae-bd \end{array}\right)$$
 
+首先用双精度进行计算：
 ```cpp
 template<int32_t N, typename Real>
 Real TestClosestPoint(const vec<N, Real>& p0, const vec<N, Real>& p1,
@@ -127,4 +130,172 @@ vec<3, double> q1(1.0730877178721130, -9.8185787633992740e-007, 0.0);
 double dist = TestClosestPoint<3, double>(p0, p1, q0, q1);
 // 0.43258687891076358
 ```
+使用有理数计算：
+```cpp
+vec<3, Rational> rp0(p0[0], p0[1], p0[2]);
+vec<3, Rational> rp1(p1[0], p1[1], p1[2]);
+vec<3, Rational> rq0(q0[0], q0[1], q0[2]);
+vec<3, Rational> rq1(q1[0], q1[1], q1[2]);
+Rational dist = TestClosestPoint<3, Rational>(rp0, rp1, rq0, rq1);
+double converted = (double)dist;
+// 0.0
+```
+# [IEEE 754-2008 二进制表示](#IEEE-754-2008-二进制表示)
+
+32位浮点数和64位浮点数是根据**IEEE 754-2008**标准进行设计的。
+
+## [32位浮点数](#32位浮点数)
+
+32位浮点数的二进制形式：  
+
+![]({{ site.baseurl }}/images/apa-001.png)
+
+第31位存储符号，**0**表示非负，**1**表示负。  
+第23~30位共8位表示非负整数，$b=e+127$, $-127 \le e \le 128$    
+第0~22位共23位表示尾数
+```cpp
+union binary32
+{
+	uint32_t encoding;
+	float number;
+};
+
+constexpr binary32 F32_0_DOT_0{ 0u };
+constexpr binary32 F32_0_DOT_5{ 1056964608u };
+constexpr binary32 F32_1_DOT_0{ 1065353216u };
+constexpr binary32 F32_2_DOT_0{ 1073741824u };
+
+void test()
+{
+	binary32 x{};
+	x.number = 1.25f;
+	uint32_t s = (0x80000000 & x.encoding) >> 31;
+	uint32_t b = (0x7f800000 & x.encoding) >> 23;
+	uint32_t t = (0x007fffff & x.encoding);
+	if (b == 0) 
+	{
+		if (t == 0) // zeros
+		{
+			// x = (-1)^s * 0 [allows for +0 and -0] 
+		}
+		else  //subnormal numbers
+		{
+			// x = (-1)^s * 0.t * 2^{-126}
+		}
+	}
+	else if (b < 255)
+	{
+		// x = (-1)^s * 1.t * 2^{b-127}
+	}
+	else
+	{
+		if (t == 0)
+		{
+			// x = (-1)^s * infinity
+		}
+		else
+		{
+			if (t & 0x00400000)
+			{
+				// x = quiet NaN
+			}
+			else
+			{
+				// x = sigaling NaN
+			}
+			// payload = t & 0x003fffff
+		}
+	}
+
+	// binary32 tb32{}; tb32.encoding = t;
+	// binary32 ONE_DOT_T{};
+	// ONE_DOT_T.encoding = tb32.encoding + F32_1_DOT_0.encoding;
+	// float z = ((s%2==0)?1.f:-1.f) * (ONE_DOT_T.number) * std::powf(2.f, b - 127);
+	// z = 1.25
+}
+```
+
+## [64位浮点数](#64位浮点数)
+
+64位浮点数的二进制形式：  
+
+![]({{ site.baseurl }}/images/apa-002.png)
+
+第63位存储符号，0表示非负，1表示负。
+第52~62位共11位表示非负整数，$b=e+1023$, $-1023 \le e \le 1024$   
+第0~51位共52位表示尾数
+```cpp
+union binary64
+{
+	uint64_t encoding;
+	double number;
+};
+
+constexpr binary64 F64_0_DOT_0{ 0lu };
+constexpr binary64 F64_0_DOT_5{ 4602678819172646912lu };
+constexpr binary64 F64_1_DOT_0{ 4607182418800017408lu };
+constexpr binary64 F64_2_DOT_0{ 4611686018427387904lu };
+
+void test()
+{
+	binary64 x{};
+	x.number = 1.25;
+	uint64_t s = (0x8000000000000000 & x.encoding) >> 63;
+	uint64_t b = (0x7ff0000000000000 & x.encoding) >> 52;
+	uint64_t t = (0x000fffffffffffff & x.encoding);
+	if (b == 0)
+	{
+		if (t == 0) // zeros
+		{
+			// x = (-1)^s * 0 [allows for +0 and -0]
+		}
+		else // subnormal numbers
+		{
+			// x = (-1)^s * 0.t * 2^{-1022}
+		}
+	}
+	else if (b < 2047) // normal numbers
+	{
+		// x = (-1)^s * 1.t * 2^{b-1023}
+		binary64 ONE_DOT_T{};
+		ONE_DOT_T.encoding = tb64.encoding + F64_1_DOT_0.encoding;
+		double z = ((s % 2 == 0) ? 1.0 : -1.0) * (ONE_DOT_T.number) * std::pow(2.0, b - 1023);
+		std::cout << z << std::endl;
+	}
+	else // special numbers
+	{
+		if (t == 0)
+		{
+			// x = (-1)^s * infinity
+		}
+		else
+		{
+			if (t & 0x0008000000000000)
+			{
+				// x = quiet NaN
+			}
+			else
+			{
+				// x = signaling NaN
+			}
+			// payload = t & 0x0007ffffffffffff
+		}
+	}
+
+	// binary64 tb64{}; tb64.encoding = t;
+	// binary64 ONE_DOT_T{};
+	// ONE_DOT_T.encoding = tb64.encoding + F64_1_DOT_0.encoding;
+	// double z = ((s % 2 == 0) ? 1.0 : -1.0) * (ONE_DOT_T.number) * std::pow(2.0, b - 1023);
+	// z = 1.25
+}
+```
+
+# [二进制科学计数](#二进制科学计数)
+
+一个正数的二进制科学计数(Binary Scientific Numbers)表示为下面形式:   
+
+$$r=1.c*2^{p}=(1+\sum_{i=0}^{n-1}c_{i}2^{-(i+1)})2^{p}$$
+
+其中$c=c0$
+
 
