--- a/_posts/2024-01-01-APA001.markdown
+++ b/_posts/2024-01-01-APA001.markdown
@@ -296,6 +296,7 @@ void test()
 
 $$r=1.c*2^{p}=(1+\sum_{i=0}^{n-1}c_{i}2^{-(i+1)})2^{p}$$
 
-其中$c=c0$
+其中$c=c0...c_{n-1}$有n位, $p$是整数。如果$c$有$\infty$位，则$r$可表示所有正实数。
+
 
 
