--- a/_posts/2024-01-01-APA001.markdown
+++ b/_posts/2024-01-01-APA001.markdown
@@ -302,17 +302,19 @@ $$r=1.c*2^{p}=(1+\sum_{i=0}^{n-1}c_{i}2^{-(i+1)})2^{p}$$
 如果$x,y \in B$, 则$x+y, x-y, x*y$ 都属于$B$, 但是除法是不包含的。因为除法会产生无穷位的表示。例如，$1=1.0*2^{0}$ 和 $3=1.1*2^{1}$, 但是$1/3$需要无穷位表示。 
    
 二进制科学计数的具体实现：   
-$r=1.c*2^{p}$, 其中$c$有$n$位，$c_{0},...c_{n-1}$, 其中最后一位为$c_{n-1}=1$   
+$$r=1.c*2^{p}$$ 
+其中$c$有$n$位，$c_{0},...c_{n-1}$, 其中最后一位为$c_{n-1}=1$   
 其可改写为：   
-$r=\hat{c}*2^{p-n}=\hat{c}*2^{b}$ 其中$\hat{c}$ 是$(n+1)$位整数， 其首位与尾位都是1   
+$$r=\hat{c}*2^{p-n}=\hat{c}*2^{b}$$ 
+其中$\hat{c}$ 是$(n+1)$位整数， 其首位与尾位都是1   
 那么$r$可表示为：符号$\sigma$, $n+1$位整数$\hat{c}$, 指数$b$   
 那么二进制科学计数的加，减，乘可以表示为正整数的运算
 
 ## [乘法](乘法)
 
-$x=1.u*2^{p}$, $y=1.v*2^{q}$, $z=1.w*2^{r}$  
-如果 $u=0$, $x*y=1.v*2^{p+q}$
-如果 $v=0$, $x*y=1.u*2^{p+q}$   
+设$x=1.u*2^{p},y=1.v*2^{q}, z=1.w*2^{r}$  
+如果 $u=0,x*y=1.v*2^{p+q}$  
+如果 $v=0,x*y=1.u*2^{p+q}$   
 如果 $u>0, v>0$， $u$有$n>0$位， $v$有$m>0$位，则:   
 $$x*y=1.u*2^{p}*1.v*2^{q}=\hat{u}*2^{p-n}*\hat{v}*2^{q-m}=\hat{u}*\hat{v}*2^{p-n+q-m}=\hat{w}*2^{p-n+q-m}$$  
 其中$\hat{w}=\hat{u}*\hat{v}$ 是奇数乘积。$\hat{u}$有$n+1$位，$\hat{v}$有$m+1$位，所以$\hat{w}$是一个奇数，其有$n+m+1$或$n+m+2$位。   
