--- a/_posts/2024-01-01-APA001.markdown
+++ b/_posts/2024-01-01-APA001.markdown
@@ -297,7 +297,13 @@ void test()
 $$r=1.c*2^{p}=(1+\sum_{i=0}^{n-1}c_{i}2^{-(i+1)})2^{p}$$   
 
 其中$c=c0...c_{n-1}$有n位, $p$是整数。如果$c$有$\infty$位，则$r$可表示所有正实数。但是计算机里只能是有限位。   
-有理数$\frac{54}{4}=1.275*10^{1}=1.10011*2^{3}$可以用有限位表示，无理数$\sqrt{2}$则需要无穷位表示。可以使用$\sigma \in \{-1,0,1\}$表示符号。把具有这种形式$\sigma(1.c) * 2^{p}$表示的数的集合$B$称为二进制科学计数。   
+有理数  
+$$\frac{54}{4}=1.275*10^{1}=1.10011*2^{3}$$  
+可以用有限位表示   
+无理数
+$$\sqrt{2}$$   
+则需要无穷位表示。   
+可以使用$\sigma \in {-1,0,1}$表示符号。把具有这种形式$\sigma(1.c) * 2^{p}$表示的数的集合$B$称为二进制科学计数。   
   
 如果$x,y \in B$, 则$x+y, x-y, x*y$ 都属于$B$, 但是除法是不包含的。因为除法会产生无穷位的表示。例如，$1=1.0*2^{0}$ 和 $3=1.1*2^{1}$, 但是$1/3$需要无穷位表示。 
    
@@ -316,14 +322,23 @@ $$r=\hat{c}*2^{p-n}=\hat{c}*2^{b}$$
 
 ## [乘法](乘法)
 
-设$x=1.u*2^{p},y=1.v*2^{q}, z=1.w*2^{r}$  
-如果 $u=0,x*y=1.v*2^{p+q}$  
-如果 $v=0,x*y=1.u*2^{p+q}$   
-如果 $u>0, v>0$， $u$有$n>0$位， $v$有$m>0$位，则:   
+设  
+$$x=1.u*2^{p},y=1.v*2^{q}, z=1.w*2^{r}$$    
+
+则   
+$$u=0,x*y=1.v*2^{p+q}$$     
+
+则   
+$$v=0,x*y=1.u*2^{p+q}$$     
+
+则$u>0, v>0$， $u$有$n>0$位， $v$有$m>0$位，则:   
 
 $$x*y=1.u*2^{p}*1.v*2^{q}=\hat{u}*2^{p-n}*\hat{v}*2^{q-m}=\hat{u}*\hat{v}*2^{p-n+q-m}=\hat{w}*2^{p-n+q-m}$$  
-  
-其中$\hat{w}=\hat{u}*\hat{v}$ 是奇数乘积。$\hat{u}$有$n+1$位，$\hat{v}$有$m+1$位，所以$\hat{w}$是一个奇数，其有$n+m+1$或$n+m+2$位。   
+
+其中  
+$$\hat{w}=\hat{u}*\hat{v}$$   
+
+是奇数乘积。$\hat{u}$有$n+1$位，$\hat{v}$有$m+1$位，所以$\hat{w}$是一个奇数，其有$n+m+1$或$n+m+2$位。   
   
 **例如**：
 ```
@@ -333,7 +348,9 @@ smallest odd integers: 10001*1001 = 10011001  -->  n+m+1=8
 largest odd integers:  11111*1111 = 111010001 -->  n+m+2=9
 ```
 令$l=n+m+c$ 其中$c=0,or,c=1$    
-则$\hat{w}$是一个$(l+1)$位的奇数，$\hat{w}=1w_{0}...w_{l-1}=1.w_{0}...w_{l-1}*2^{l}=1.w*2^{l}, w_{l-1}=1$   
+则$\hat{w}$是一个$(l+1)$位的奇数，  
+
+$$\hat{w}=1w_{0}...w_{l-1}=1.w_{0}...w_{l-1}*2^{l}=1.w*2^{l}, w_{l-1}=1$$   
 
 $$x*y=\hat{w}*2^{p-n+q-m}=1.w*2^{p-n+q-m+l}=1.w*2^{p+q+c}=1.w*2^{r}=z$$   
 其中$r=p+q+c$
