--- a/_posts/2024-01-01-APA001.markdown
+++ b/_posts/2024-01-01-APA001.markdown
@@ -305,9 +305,10 @@ $$\frac{54}{4}=1.275*10^{1}=1.10011*2^{3}$$
 无理数$\sqrt{2}$则需要无穷位表示。   
 可以使用$\sigma \in {-1,0,1}$表示符号。把具有这种形式$\sigma(1.c) * 2^{p}$表示的数的集合$B$称为二进制科学计数。   
       
-$$if x,y \in B, x+y, x-y, x*y  \in B$$    
+$$x,y \in B, x+y, x-y, x*y  \in B$$    
    
-但是除法是不包含的。因为除法会产生无穷位的表示。例如，$1=1.0*2^{0}$ 和 $3=1.1*2^{1}$, 但是$1/3$需要无穷位表示。     
+但是除法是不包含的。因为除法会产生无穷位的表示。例如，数字$1=1.0*2^{0}, 3=1.1*2^{1}$, 但是$1/3$需要无穷位表示。     
+
 二进制科学计数的具体实现：   
     
 $$r=1.c*2^{p}$$    
