--- a/_posts/2024-01-01-APA001.markdown
+++ b/_posts/2024-01-01-APA001.markdown
@@ -339,7 +339,7 @@ $$x*y=1.u*2^{p}*1.v*2^{q}=\hat{u}*2^{p-n}*\hat{v}*2^{q-m}=\hat{u}*\hat{v}*2^{p-n
 其中  
 $$\hat{w}=\hat{u}*\hat{v}$$   
 
-是奇数乘积。$\hat{u}$有$n+1$位，$\hat{v}$有$m+1$位，所以$\hat{w}$是一个奇数，其有$n+m+1$或$n+m+2$位。   
+是奇数乘积（$u$和$v$的最后一位都是1）。$\hat{u}$有$n+1$位，$\hat{v}$有$m+1$位，所以$\hat{w}$是一个奇数，其有$n+m+1$或$n+m+2$位。   
   
 **例如**：
 ```
