--- a/_posts/2024-01-01-APA001.markdown
+++ b/_posts/2024-01-01-APA001.markdown
@@ -361,5 +361,32 @@ $$x*y=\hat{w}*2^{p-n+q-m}=1.w*2^{p-n+q-m+l}=1.w*2^{p+q+c}=1.w*2^{r}=z$$
 
 ## [加法](加法)
 
+设   
+$$x=1.u*2^{p},y=1.v*2^{q}, z=1.w*2^{r}$$   
+其中我们需要确定$w$和$r$. 
+当$x=0$或$y=0$, 计算就十分简单。   
+当$x>0$且$y>0$, 其中$u$具有$n$位，其中$v$具有$m$位，它们的和为：  
+
+$$x+y=1.u*2^{p}+1.v*2^{q}=\hat{u}*2^{p-n}+\hat{v}*2^{q-m}$$   
+
+此时计算取决于$p-n$和$q-m$的相对大小    
+
+### [The Case p-n>q-m]
+
+当$p-n>q-m$，求和可以写成：     
+
+$$\hat{u}*2^{p-n}+\hat{v}*2^{q-m}=(\hat{u}*2^{d}+\hat{v})*2^{q-m}=\hat{w^}*2^{q-m}$$
+
+其中$d=(p-n)-(q-m)$.      
+整数$\hat{u}*2^{d}$ 是偶数，因为$\hat{u}$是奇数且$d>0$. 整数$\hat{v}$时奇数. 因此$\hat{w}$是奇数。
+
+$$x+y=\hat{w}*2^{q-m}=1.w*2^{q-m+l}=1.w*2^{r}=z$$   
+
+其中$r=q-m+l$, 其中$l$是$\hat{w}$首1-bit的位置(索引)。 这个加法的实现包含计算$\hat{u}*2^{d}$, 其用**位左移**运算实现。然后加上$\hat{v}$，然后就可以确定$\hat{w}$的首1-bit位置了。
+
+
+### [The Case p-n<q-m]
+
+### [The Case p-n=p-m]
 
 
