--- a/_posts/2024-01-01-APA001.markdown
+++ b/_posts/2024-01-01-APA001.markdown
@@ -375,7 +375,7 @@ $$x+y=1.u*2^{p}+1.v*2^{q}=\hat{u}*2^{p-n}+\hat{v}*2^{q-m}$$
 
 当$p-n>q-m$，求和可以写成     
 
-$$\hat{u}*2^{p-n}+\hat{v}*2^{q-m}=(\hat{u}*2^{d}+\hat{v})*2^{q-m}=\hat{w^}*2^{q-m}$$
+$$\hat{u}*2^{p-n} + \hat{v}*2^{q-m} = (\hat{u}*2^{d}+\hat{v}) *2^{q-m}= \hat{w}*2^{q-m}$$   
 
 其中$d=(p-n)-(q-m)$.      
 整数$\hat{u}*2^{d}$ 是偶数，因为$\hat{u}$是奇数且$d>0$. 整数$\hat{v}$时奇数. 因此$\hat{w}$是奇数。
