--- a/_posts/2024-01-01-APA001.markdown
+++ b/_posts/2024-01-01-APA001.markdown
@@ -378,7 +378,7 @@ $$x+y=1.u*2^{p}+1.v*2^{q}=\hat{u}*2^{p-n}+\hat{v}*2^{q-m}$$
 $$\hat{u}*2^{p-n} + \hat{v}*2^{q-m} = (\hat{u}*2^{d}+\hat{v}) *2^{q-m}= \hat{w}*2^{q-m}$$   
 
 其中$d=(p-n)-(q-m)$.      
-整数$\hat{u}*2^{d}$ 是偶数，因为$\hat{u}$是奇数且$d>0$. 整数$\hat{v}$时奇数. 因此$\hat{w}$是奇数。
+整数$\hat{u}*2^{d}$ 是偶数，因为$\hat{u}$是奇数且$d>0$. 整数$\hat{v}$是奇数. 因此$\hat{w}$是奇数。
 
 $$x+y=\hat{w}*2^{q-m}=1.w*2^{q-m+l}=1.w*2^{r}=z$$   
 
@@ -387,6 +387,29 @@ $$x+y=\hat{w}*2^{q-m}=1.w*2^{q-m+l}=1.w*2^{r}=z$$
 
 ### [Case1](Case1)
 
+当$p-n<q-m$，求和可以写成：      
+
+$$\hat{u}*2^{p-n} + \hat{v}*2^{q-m} = (\hat{u}+\hat{v}*2^{d}) *2^{p-n}= \hat{w}*2^{p-n}$$   
+
+其中$d=(q-m)-(p-n)$.    
+整数$\hat{v}*2^{d}$是偶数因为$\hat{v}$是奇数且$d>0$. 整数$\hat{u}$是奇数. 因此$\hat{w}$是奇数。     
+
+$$x+y=\hat{w}*2^{p-n}=1.w*2^{p-n+l}=1.w*2^{r}=z$$
+
+其中$r=p-n+l$, 其中$l$是$\hat{w}$首1-bit的位置(索引)。这个加法的实现包含计算$\hat{v}*2^{d}$, 其用**位左移**运算实现。然后加上$\hat{u}$，然后就可以确定$\hat{w}$的首1-bit位置了。
+
+
 ### [Case2](Case2)
+
+当$p-n=q-m$，求和可以写成:    
+
+$$\hat{u}*2^{p-n} + \hat{v}*2^{q-m} = (\hat{u}+\hat{v}) *2^{q-m}= \hat{w}*2^{q-m}$$   
+
+整数$\hat{u}$和$\hat{v}$是奇数，因此$\hat{w}$是偶数. 设$l$是$\hat{w}$首1-bit的位置(索引)，设t是$\hat{w}$尾1-bit的位置。其中需要$l>=t>0$，可以对$hat{w}$位右移$t$位获得一个奇数$\hat{w}$, 此时$\hat{w}$首1-bit的位置(索引)$f=l-t$:     
+
+$$x+y=\hat{w}*2^{q-m}=w^{*}*2^{q-m+t}=1.w*2^{q-m+t+f}=1.w*2^{q-m+l}=1.w*2^{r}=z$$
+
+其中$r=q-m+l$。小数部分$w$(表示为整数)有$l-t$位，加法的实现涉及整数加法$\hat{w}=\hat{u}+\hat{v}$，然后确定$l$和$t$，$\hat{w}$位右移$t$位获得$w^{*}$, 最终得到$z=1.w*2^{r}$，无符号整数$w^{*}$和指数$b=q-m+t$.
+
 
 
