--- a/_posts/2024-01-01-APA001.markdown
+++ b/_posts/2024-01-01-APA001.markdown
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  APA-高精度计算-简介
+title:  APA-简介
 date:   2024-01-01 15:30:00 +0300
-tags:   APA
+tags:   ArbitraryPrecisionArthmetic
 description:  高精度计算
 ---
 
