--- a/_posts/2024-07-11-APA003.markdown
+++ b/_posts/2024-07-11-APA003.markdown
@@ -127,5 +127,11 @@ $$x+y=\tilde{w}*2^{q-m}=\hat{w}*2^{q-m+t}=1.w*2^{q-m+t+f}=1.w*2^{q-m+l}=1.w*2^{r
 
 其中$r=q-m+l$。小数部分$w$(表示为整数)有$l-t$位，加法的实现涉及整数加法$\tilde{w}=\tilde{u}+\tilde{v}$，然后确定$l$和$t$，$\tilde{w}$位右移$t$位获得$\hat{w}$, 最终得到$z=1.w*2^{r}$，无符号整数$\hat{w}$和指数$b=q-m+t$.
 
+## [减法](减法)
 
+计算$x-y$. 当$x=0, y=0$, 计算非常简单。接下来仅仅需要分析$x>y>0$的这种情况，因为当$0<x<y$, 我们知道$x-y=-(y-x)$，那么就需要计算$y-x$, 此时情况为$y>x>0$, 又回到原始情况。     
+
+$$x-y=1.u*2^{p}-1.v*2^{q} = \hat{u}*2^{p-n}-\hat{v}*2^{q-m}$$
+
+上述的计算分析同加法一致，需要根据$p-n$和$q-m$的相对关系进行分别讨论。
 
