--- a/_posts/2024-07-11-APA003.markdown
+++ b/_posts/2024-07-11-APA003.markdown
@@ -42,7 +42,7 @@ $$r=\tilde{c}*2^{p-n}=\tilde{c}*2^{b}$$
 那么$r$可表示为：符号$\sigma$, $n+1$位整数$\tilde{c}$, 指数$b$   
 那么二进制科学计数的加，减，乘可以表示为正整数的运算
 
-## [乘法](乘法)
+## [乘法](#乘法)
 
 设  
 $$x=1.u*2^{p},y=1.v*2^{q}, z=1.w*2^{r}$$    
@@ -75,7 +75,7 @@ $$\tilde{w}=1w_{0}...w_{l-1}=1.w_{0}...w_{l-1}*2^{l}=1.w*2^{l}, w_{l-1}=1$$
 $$x*y=\tilde{w}*2^{p-n+q-m}=1.w*2^{p-n+q-m+l}=1.w*2^{p+q+c}=1.w*2^{r}=z$$   
 其中$r=p+q+c$
 
-## [加法](加法)
+## [加法](#加法)
 
 设   
 $$x=1.u*2^{p},y=1.v*2^{q}, z=1.w*2^{r}$$   
@@ -87,7 +87,7 @@ $$x+y=1.u*2^{p}+1.v*2^{q}=\tilde{u}*2^{p-n}+\tilde{v}*2^{q-m}$$
 
 此时计算取决于$p-n$和$q-m$的相对大小    
 
-### [Case0](Case0)
+### [Case0](#Case0)
 
 当$p-n>q-m$，求和可以写成     
 
@@ -101,7 +101,7 @@ $$x+y=\tilde{w}*2^{q-m}=1.w*2^{q-m+l}=1.w*2^{r}=z$$
 其中$r=q-m+l$, 其中$l$是$\tilde{w}$首1-bit的位置(索引)。 这个加法的实现包含计算$\tilde{u}*2^{d}$, 其用**位左移**运算实现。然后加上$\tilde{v}$，然后就可以确定$\tilde{w}$的首1-bit位置了。
 
 
-### [Case1](Case1)
+### [Case1](#Case1)
 
 当$p-n<q-m$，求和可以写成：      
 
@@ -115,7 +115,7 @@ $$x+y=\tilde{w}*2^{p-n}=1.w*2^{p-n+l}=1.w*2^{r}=z$$
 其中$r=p-n+l$, 其中$l$是$\tilde{w}$首1-bit的位置(索引)。这个加法的实现包含计算$\tilde{v}*2^{d}$, 其用**位左移**运算实现。然后加上$\tilde{u}$，然后就可以确定$\tilde{w}$的首1-bit位置了。
 
 
-### [Case2](Case2)
+### [Case2](#Case2)
 
 当$p-n=q-m$，求和可以写成:    
 
@@ -127,7 +127,7 @@ $$x+y=\tilde{w}*2^{q-m}=\hat{w}*2^{q-m+t}=1.w*2^{q-m+t+f}=1.w*2^{q-m+l}=1.w*2^{r
 
 其中$r=q-m+l$。小数部分$w$(表示为整数)有$l-t$位，加法的实现涉及整数加法$\tilde{w}=\tilde{u}+\tilde{v}$，然后确定$l$和$t$，$\tilde{w}$位右移$t$位获得$\hat{w}$, 最终得到$z=1.w*2^{r}$，无符号整数$\hat{w}$和指数$b=q-m+t$.
 
-## [减法](减法)
+## [减法](#减法)
 
 计算$x-y$. 当$x=0, y=0$, 计算非常简单。接下来仅仅需要分析$x>y>0$的这种情况，因为当$0<x<y$, 我们知道$x-y=-(y-x)$，那么就需要计算$y-x$, 此时情况为$y>x>0$, 又回到原始情况。     
 
