--- a/_posts/2024-07-12-APA004.markdown
+++ b/_posts/2024-07-12-APA004.markdown
@@ -12,8 +12,7 @@ description:  高精度计算
 
 对于任意位数的整数的计算，需要处理整数的进位与溢出。一个经典的计算N-bit整数的实现，是将计算嵌入进2N-bit的计算。接下来我们假定CPU支持64-bit无符号整型(uint64_t)计算，其包含在头文件<cstdint>. 我们可以将无符号整数表示为:     
 
-$$\hat{u}=\sum_{i=0}^{i_{max}-1} u_{i}(2^{32})^{i}$$     
-$$\hat{v}=\sum_{j=0}^{j_{max}-1} v_{j}(2^{32})^{j}$$
+$$\hat{u}=\sum_{i=0}^{i_{max}-1} u_{i}(2^{32})^{i} \qquad \hat{v}=\sum_{j=0}^{j_{max}-1} v_{j}(2^{32})^{j}$$
 
 其中$u_{i},v_{j}$是32-bit无符号整数。
 
