--- a/_posts/2024-07-12-APA004.markdown
+++ b/_posts/2024-07-12-APA004.markdown
@@ -215,3 +215,117 @@ s_{4} & s_{3} & s_{2} & s_{1} & s_{0}
 \hat{u} * \hat{v}
 \end{array}
 $$  
+
+伪代码如下：
+```cpp
+// inputs
+int32_t imax, jmax;
+uint32_t u[imag], v[jmax];
+// outputs
+int32_t kmax = imax + jmax;
+uint32_t utv[kmax+1]; // u* v
+SetToZero(utv, kmax); // uv is the accumulator of u[i] * v;
+uint32_t product[kmax];
+for(i=0; i<imax; ++i)
+{
+  // Compute the product p = u[i] * v.
+  uint64_t uBlock = u[i], carry=0;
+  int32_t i1, i2;
+  for(j=0, k=i; j<jmax; ++j, ++k)
+  {
+    uint64_t vBlock = v[j];
+    uint64_t term = uBlock * vBlock + carry;
+    product[k] = (uint32_t)(term & 0x00000000FFFFFFFF);
+    carry = (term >> 32);
+  }
+  if(k<kmax)
+  {
+    product[k] = (uint32_t) carry;
+  }
+  // Add p to the accumulator uv.
+  uint64_t sum;
+  carry = 0;
+  for(j=0, k=i; j<jmax; ++j, ++k)
+  {
+    sum = product[k] + (utv[k] + carry);
+    utv[k] = (uint32_t)(sum & 0x00000000FFFFFFFF);
+    carry = (sum>>32);
+  }
+  if(k<kmax)
+  {
+    sum = product[k] + carry;  // utv[k]==0 is guaranteed
+    utv[k] = (uint32_t)(sum & 0x00000000FFFFFFFF);
+  }
+}
+```
+
+## [位运算-左移](#位运算-左移)
+
+加法运算与减法运算都包含计算$\hat{v}=\hat{u}*2^{\sigma}$, 其中$\hat{u}$是一个奇数，且$\sigma > 0$, 这等价于对$\hat{u}$进行位左移$\sigma$位。      
+
+下面为示例。设$\hat{u}$=0x08192A3B4C5D6E7F8, $\sigma=40$. $\hat{u}$需要两个32-bit的空间来存储，其有60位，首1-bit索引是59. 尾1-bit索引是0. 其左移$\sigma$位，那么首1-bit索引变为99，所以$\hat{v}$需要四个32-bit的空间来存储。且$\hat{v}$尾部32-bit全为0，因为$\sigma / 32 = 1$(整数除法); 因此$v[0]=0$. 
+
+$$
+\begin{array}{c|c|c|c}
+         &          &    u[1]  &   u[0]    \\
+         &          &          &           \\
+         &          & 08192A3B & 4C5D6E7F  \\
+         &          &          &           \\
+00000008 & 192A3B4C & 5D6E7F00 & 00000000  \\
+         &          &          &           \\
+   v[3]  &   v[2]   &    v[1]  &   v[0]    
+\end{array}
+$$
+
+
+伪代码如下：
+```cpp
+// inputs
+int32_t numUBits = <number of bits of u>;
+int32_t numShiftedUBits = numUBits + shift;
+int32_t imax = 1 + (numUBits - 1) / 32;
+uint32_t u[imax];
+
+// outputs
+int32_t jmax = 1 + (numShiftedUBits - 1) / 32;
+uint32_t shiftedU[jmax];             // (u<<shift)
+// Set the low-order bits to zero.
+int32_t shiftBlock = shift / 32;
+int32_t i, j;
+for(j=0; j<shiftBlock; ++j)
+{
+  shiftedU[j] = 0;
+}
+// Get the index of the trailing 1-bit within the result.
+int32_t leftShift = shift % 32;
+if(leftShift > 0)
+{
+  // The trailing 1-bits for source and target are at different relative  
+  // indices. Each shifted source block straddles a boundary between two 
+  // target blocks, so we must extract the subblocks and copy accordingly.
+  int32_t rightShift = 32 - leftShift;
+  uint32_t previous = 0;
+  for(j = shiftBlock, i=0; i<imax; ++j, ++i)
+  {
+    uint32_t current = u[i];
+    shiftedU[i] = (current << leftShift) | (previous >> rightShift);
+    prev = current;
+  }
+  if(j<jmax)
+  {
+    // The leading 1-bit of the source is at a relative index such that 
+    // when you left-shift, that bit occurs in a new block.
+    shiftedU[j] = (previous >> rightShift);
+  }
+}
+else
+{
+  // The trailing 1-bits for source and target are at the same relative
+  // index. The shift reduces to a block copy.
+  for(j=shiftBlock, i=0; i<imax; ++j, ++i)
+  {
+    shiftedU[j] = u[i];
+  }
+}
+```
+
