--- a/_posts/2024-07-12-APA004.markdown
+++ b/_posts/2024-07-12-APA004.markdown
@@ -20,7 +20,8 @@ $$\hat{u}=\sum_{i=0}^{i_{max}-1} u_{i}(2^{32})^{i} \qquad \hat{v}=\sum_{j=0}^{j_
 
 加法计算的样例如下，假设$i_{max}=3,j_{max}=2$，左侧是确切例子，右侧是一般化例子：         
 
-$$\begin{array}{cccc} 
+$$
+\begin{array}{cccc} 
 1 & 1 & 0 &   \\
 \hdashline
   & 9 & 2 & 5 \\
@@ -46,7 +47,12 @@ w_{3} & w_{2} & w_{1} & w_{0}
 \end{array}
 $$   
 
-对于第一项没有进位即$c_{0}=0$, 对于“uint32_t”的运算$p_{0}=u_{0}+v_{0}+c_{0}$, 最坏的情况下$p_{0}$成为“uin64_t”，当其大于$2^{32}$. 低位的32位提取出来作为$w_{0}=Low(p_{0})$, 高位的32位提取出来作为进位$c_{1}=High(p_{0})$. 对下一个$u_{i}$重复这个过程。     
+对于第一项没有进位即$c_{0}=0$, 对于“uint32_t”的运算
+
+$$p_{0}=u_{0}+v_{0}+c_{0}$$ 
+
+最坏的情况下$p_{0}$成为“uin64_t”, 当其大于$2^{32}$.     
+低位的32位提取出来作为$w_{0}=Low(p_{0})$, 高位的32位提取出来作为进位$c_{1}=High(p_{0})$. 对下一个$u_{i}$重复这个过程。     
 
 伪代码如下， 假定$i_{max}>=j_{max}$.  
 ```cpp
