--- a/_posts/2024-07-12-APA004.markdown
+++ b/_posts/2024-07-12-APA004.markdown
@@ -47,11 +47,7 @@ w_{3} & w_{2} & w_{1} & w_{0}
 \end{array}
 $$   
 
-对于第一项没有进位即$c_{0}=0$, 对于“uint32_t”的运算
-
-$$p_{0}=u_{0}+v_{0}+c_{0}$$ 
-
-最坏的情况下$p_{0}$成为“uin64_t”, 当其大于$2^{32}$.     
+对于第一项没有进位即$c_{0}=0$, 对于“uint32_t”的运算$p_{0}=u_{0}+v_{0}+c_{0}$最坏的情况下$p_{0}$成为“uin64_t”, 当其大于    
 低位的32位提取出来作为$w_{0}=Low(p_{0})$, 高位的32位提取出来作为进位$c_{1}=High(p_{0})$. 对下一个$u_{i}$重复这个过程。     
 
 伪代码如下， 假定$i_{max}>=j_{max}$.  
