--- a/_posts/2024-07-23-APA005.markdown
+++ b/_posts/2024-07-23-APA005.markdown
@@ -9,7 +9,15 @@ description:  高精度计算
 # [浮点数到科学二进制的转换](#浮点数到科学二进制的转换)
 
 接下来将描述"float"到科学二进制的转换。对于"double"类型，其过程相似。可以使用模板来处理不同的浮点类型。    
-浮点数的小数部分为$0.t*2^{-126}$表示, 其中$t>0$是其23-bit的尾数。设$f$是其首1-bit的索引，设$l$是其尾1-bit的索引，则$t$就有$f-l+1$位，指数$b=-149+l$因此$0.t*2^{-126}= \hat{u} * 2^{p}$其中$u=t_{f}t_{f-1}...t_{l}$其中$p=-149+f$.   
+浮点数的小数部分为
+
+$$0.t*2^{-126}$$
+
+其中$t>0$是其23-bit的尾数。设$f$是其首1-bit的索引，设$l$是其尾1-bit的索引，则$t$就有$f-l+1$位，指数$b=-149+l$, 因此
+
+$$0.t*2^{-126}= \hat{u} * 2^{p}$$
+
+其中$u=t_{f}t_{f-1}...t_{l},\quad p=-149+f$.   
 
 "subnormal float to BSNumber"伪代码如下：
 ```cpp
